@@ -422,6 +422,7 @@ tvshow.synctraktwatched=Synchronize the watched state with Trakt.tv
 tvshow.synctraktwatched.desc=Synchronize the watched state with Trakt.tv
 
 tvshowepisode.scrape=Scrape episode metadata
+tvshowepisode.scrape.withoutartwork=Scrape episode metadata (without thumbs)
 tvshowepisode.clone=Clone episode
 tvshowepisode.remove=Remove episode
 tvshowepisode.rewritenfo=Rewrite NFO for selected episode(s)
